{
    "name": "InputMap",
    "maps": [
        {
            "name": "LeftPaddle",
            "id": "2ad74d81-4adc-4368-9619-2e3eab88404d",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "bf0f6b63-721f-461f-815e-8f7823af3da9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "b14194fa-6f77-4dd9-96f3-deecd9df8969",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "UpDown",
                    "id": "bdae8e61-5334-40de-a0ef-de1b5cfa2a2f",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e6608c24-4d5c-4c62-b7ad-f11222797891",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "fa9a30d1-654d-4cc0-99f2-564a1d3c96de",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "4df4014c-fd13-4d0a-a17f-b6fefbbbe04d",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "RightPaddle",
            "id": "ae6c5268-b52f-409b-9dac-ecedfa14f0e6",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "dc477a79-f22f-42e2-872e-fe6acf7e4ed5",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "UpDown",
                    "id": "85f0d1c0-2638-4c3e-a232-ee56d47743b4",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "f073f06e-9b9d-4da4-87da-6fba1c24c739",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "de240d8b-8800-47e4-abc2-038dfc33203c",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}